NBNP-131 Add BS4 sticky support for facets

--- a/custom/themes/newspapers_lib_unb_ca/src/scss/_accessibility.scss
+++ b/custom/themes/newspapers_lib_unb_ca/src/scss/_accessibility.scss
@@ -26,3 +26,8 @@ code {
 .description.text-muted {
   color: $gray-700!important;
 }
+
+// Offset height of affix|unb logo (66px)
+.sticky-top {
+  top: 70px;
+}
