--- a/custom/themes/newspapers_lib_unb_ca/templates/page.html.twig
+++ b/custom/themes/newspapers_lib_unb_ca/templates/page.html.twig
@@ -14,7 +14,7 @@
           {% if page.sidebar_first_top %}
             {{ page.sidebar_first_top }}
           {% endif %}
-          <div id="sidebarFacets" class="collapse show">
+          <div id="sidebarFacets" class="collapse show sticky-top">
             <aside class="section" role="complementary">
               <h2 class="visually-hidden">Select Filters</h2>
               {{ page.sidebar_first }}
