--- a/custom/themes/newspapers_lib_unb_ca/templates/page.html.twig
+++ b/custom/themes/newspapers_lib_unb_ca/templates/page.html.twig
@@ -10,7 +10,7 @@
         </section>
       </main>
       {% if page.sidebar_first %}
-        <div{{ sidebar_first_attributes }}>
+        <div{{ sidebar_first_attributes.addClass('mb-2') }}>
           {% if page.sidebar_first_top %}
             {{ page.sidebar_first_top }}
           {% endif %}
