BugzID: 20445 Refactor NBNP Partnerships section using new SVG

--- a/custom/themes/newspapers_lib_unb_ca/src/scss/_import.scss
+++ b/custom/themes/newspapers_lib_unb_ca/src/scss/_import.scss
@@ -12,6 +12,7 @@
 @import "media";
 @import "owl-carousel";
 @import "pager";
+@import "partnerships";
 @import "scrollup";
 @import "sidebar";
 @import "sidebar_toggle";
