NBNP-452 Reduce contrast re: highligted/non-highlighted excerpt words

--- a/custom/themes/newspapers_lib_unb_ca/src/scss/style.scss
+++ b/custom/themes/newspapers_lib_unb_ca/src/scss/style.scss
@@ -511,6 +511,11 @@ a.btn-add:active {
 }
 .search-results .excerpt {
   color: $gray-700;
+
+  em {
+    font-style: normal;
+    color: $gray-800;
+  }
 }
 
 /* Override Search API Autocomplete */
